--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </nav>
     <!-- Nav Section End Here -->
     <!-- Header Section Start Here -->
-    <header>
+    <header class="mb-3">
         <div class="container header_container" id="home">
             <div class="header_left">
                 <div class="header_left_img">
