--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <h3>Temperature Convertor</h3>
                         <p>a practical tool for quickly converting temperature values between different scales, making
                             it useful for educational purposes or everyday temperature calculations.</p>
-                        <a href="#">View</a>
+                        <a href="https://ksraviteja.github.io/Temperature-Converter/">View</a>
                     </div>
                 </div>
                 <div class="card">
